Added some code for nearest neighbor calculation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ find_package (PCL 1.3 REQUIRED
 
 # PCL headers location
 include_directories (${PCL_INCLUDE_DIRS})
+# OpenCV headers location
+include_directories(/usr/include/opencv)
 
 # PCL libraries location
 link_directories (${PCL_LIBRARY_DIRS})
@@ -20,7 +22,10 @@ link_directories (${PCL_LIBRARY_DIRS})
 add_executable (${PROG} ${SRC})
 
 # link the libraries
+# Required OpenCV libraries
+set(OpenCV_LIBS opencv_core opencv_flann)
 target_link_libraries (${PROG}
   ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES}
   ${PCL_VISUALIZATION_LIBRARIES}
+  ${OpenCV_LIBS}
 )
